# ros2_cuda_ICP

./: .devenv.flake.nix  .gitignore  .gitmodules  devenv.nix  devenv.yaml  overlay.nix  shell.nix
.devenv/: bash  devenv.json  flake.json  input-paths.txt  nix-eval-cache.db  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db-shm  tasks.db-wal
.devenv/gc/: shell  shell-22-link  shell-24-link
cuda_icp/: CMakeLists.txt  README.md  build.sh
cuda_icp/include/: icp_cpu.hpp  icp_cuda.cuh  point_cloud_io.hpp  visualization.hpp
cuda_icp/src/: icp_cpu.cpp  icp_cuda.cu  main.cpp  point_cloud_io.cpp  visualization.cpp
src/shredder_description/: CMakeLists.txt  package.nix  package.xml
src/shredder_description/launch/: display.launch.py  display_with_teleop.launch.py  shredder_bringup.launch.py
src/shredder_description/params/: shredder_bridge.yaml
src/shredder_description/rviz/: view.rviz
src/shredder_description/scripts/: odom_test.py
src/shredder_description/src/: shredder_controller.cpp  traversability_grid_map.cpp
src/shredder_description/urdf/: (orig)shredder_core.xacro  (orig2_track)shredder_core.xacro  shredder.urdf  shredder.urdf.xacro  shredder_core.xacro  shredder_not_gazebo.urdf.xacro
src/shredder_description/worlds/: cave.sdf
